--- a/index.html
+++ b/index.html
@@ -44,7 +44,15 @@
         <section id="map" class="map-section">
             <h2>Cleanup Locations</h2>
             <div id="map-container">
-                <!-- Map will be populated by JavaScript -->
+                <iframe
+                    width="100%"
+                    height="450"
+                    style="border:0"
+                    loading="lazy"
+                    allowfullscreen
+                    referrerpolicy="no-referrer-when-downgrade"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.5374721491743!2d103.95557399999999!3d1.381497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMcKwMjInNTMuNCJOIDEwM8KwNTcnMjAuMSJF!5e0!3m2!1sen!2ssg!4v1654345678901!5m2!1sen!2ssg">
+                </iframe>
             </div>
         </section>
     </main>
